# scrcpy-gui

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
src/: App.vue  commands.ts  main.ts
src-tauri/: Cargo.toml  scrcpy-gui-server  scrcpy-gui-server-v1.0.1  tauri.conf.json
src-tauri/capabilities/: default.json  shell-access.json
src-tauri/src/: main.rs
src/components/: ConfigPanel.vue  DeviceList.vue  LogViewer.vue  SettingsDialog.vue  UninstallDialog.vue
src/composables/: useScrcpyListeners.ts  useScrcpyLogs.ts  useToolPaths.ts
